# erato

./: Cargo.toml  README.md  index.html
benches/: primality_bench.rs
examples/: zeta_primality.rs
pkg/: README.md  erato.d.ts  erato.js  erato_bg.wasm  erato_bg.wasm.d.ts  package.json
src/: lib.rs
src/algorithms/: miller_rabin.rs  mod.rs  sieve.rs  tests.rs  zeta.rs
