[package]
name = "erato"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "A library for primality testing algorithms with benchmarking"
repository = "https://github.com/Green-Mice/erato"
readme = "README.md"
keywords = ["primality", "prime", "algorithms", "zeta", "riemann"]
categories = ["algorithms", "mathematics"]


[lib]
name = "erato"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bench]]
name = "primality_bench"
harness = false

[dependencies]
wasm-bindgen = "0.2"
num-traits = "0.2.19"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
